# tana_ai

./: .gitignore  pyproject.toml
tana_ai/: main.py
tana_ai/data/: small.json  small_1.json
tana_ai/services/: build_graph.py  dependencies.py  tana_types.py
