[tool.poetry]
name = "tana-ai"
version = "0.1.0"
description = ""
authors = ["Jens-Christian Fischer <jens-christian.fischer@switch.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.1.0"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
